Bug 1699180. Don't try to double tap zoom to html elements. r=botond

It'll end up scrolling to the top.

Differential Revision: https://phabricator.services.mozilla.com/D110535